Fix delete button visibility and add import statement

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,5 +1,4 @@
 h3 {
     font-size: 3.5em;
-    margin-left: 0.85em;
-    margin-top: 0.15em;
+    margin: 0.15em 1em 0 0.85em;
 }
